fix(masthead): add before and after styles to cover overflow

--- a/packages/styles/scss/components/masthead/_masthead-l1.scss
+++ b/packages/styles/scss/components/masthead/_masthead-l1.scss
@@ -20,6 +20,7 @@ $search-transition-timing: 95ms;
     @include carbon--theme($carbon--theme--white, true);
 
     display: flex;
+    position: relative;
     max-width: 98rem;
     margin-left: auto;
     margin-right: auto;
@@ -42,9 +43,33 @@ $search-transition-timing: 95ms;
       position: absolute;
       height: rem(1px);
       bottom: rem(-1px);
-      left: 0;
-      right: 0;
+      left: calc(-50vw + 50%);
+      right: calc(-50vw + 50%);
       background-color: $ui-03;
+    }
+  }
+
+  .#{$prefix}--masthead__l1-inner-container {
+    width: 100%;
+    display: flex;
+
+    &::before {
+      content: '';
+      position: absolute;
+      background-color: $ui-background;
+      height: 48px;
+      left: calc(-50vw + 50%);
+      right: 100%;
+      z-index: 1;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-color: $ui-background;
+      height: 48px;
+      left: 100%;
+      right: calc(-50vw + 50%);
     }
   }
 
